--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "II2D redux",
   "scripts": {
     "start": "NODE_ENV=develment node src/server/index.js --progress --colors --profile",
-    "clean": "rm -rf www",
+    "clean": "rm -rf public/javascripts/*",
     "slate": "rm -rf node_modules && npm install",
     "start-prod": "NODE_ENV=production node src/server/index.js --progress --colors --profile",
     "build": "npm run clean && NODE_ENV=production webpack -p --progress --colors --profile",
@@ -24,6 +24,7 @@
     "bootstrap-sass": "^3.3.6",
     "express": "^4.13.4",
     "history": "^2.0.1",
+    "jade": "^1.11.0",
     "lodash": "^4.6.1",
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.3",
@@ -33,7 +34,6 @@
     "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
     "redux-logger": "^2.6.1",
-    "redux-promise": "^0.5.1",
     "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
@@ -49,6 +49,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "node-sass": "^3.4.2",
+    "react-hot-loader": "^1.3.0",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.2",
     "redbox-react": "^1.2.2",
