--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ii2d-redux",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "II2D redux",
+  "homepage": "https://github.com/donilan/ii2d-redux",
   "scripts": {
     "start": "NODE_ENV=develment node src/server/index.js --progress --colors --profile",
     "clean": "rm -rf public/javascripts/*",
@@ -23,16 +24,14 @@
     "babel-polyfill": "^6.6.1",
     "bootstrap-sass": "^3.3.6",
     "express": "^4.13.4",
-    "history": "^2.0.1",
     "jade": "^1.11.0",
     "lodash": "^4.6.1",
-    "react": "^0.14.7",
-    "react-bootstrap": "^0.28.3",
-    "react-dom": "^0.14.7",
-    "react-redux": "^4.4.0",
-    "react-router": "^2.0.0",
-    "react-router-redux": "^4.0.0",
-    "redux": "^3.3.1",
+    "react": "^15.1.0",
+    "react-bootstrap": "^0.29.5",
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.4.0",
+    "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1"
   },
@@ -47,15 +46,15 @@
     "babel-register": "^6.6.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
+    "file-loader": "^0.9.0",
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.2",
-    "redbox-react": "^1.2.2",
-    "redux-devtools": "^3.1.1",
-    "redux-devtools-dock-monitor": "^1.1.0",
-    "redux-devtools-log-monitor": "^1.0.5",
+    "redbox-react": "^1.2.9",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11",
     "redux-slider-monitor": "^1.0.2",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
