--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "II2D redux",
   "homepage": "https://github.com/donilan/ii2d-redux",
   "scripts": {
-    "start": "NODE_ENV=develment node src/server/index.js --progress --colors --profile",
+    "start": "NODE_ENV=develment concurrently --kill-others \"node src/server/index.js\" \"node src/server/webpackServer.js\"  ",
     "clean": "rm -rf public/dist/*",
     "slate": "rm -rf node_modules && npm install",
-    "start-prod": "NODE_ENV=production node src/server/index.js --progress --colors --profile",
+    "start-prod": "NODE_ENV=production node src/server/index.js",
     "build": "npm run clean && NODE_ENV=production webpack -p --progress --colors --profile",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -44,6 +44,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.6.0",
+    "concurrently": "^2.1.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
@@ -60,7 +61,6 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.9.1"
+    "webpack-dev-server": "^1.14.1"
   }
 }
