--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
     "babel-polyfill": "^6.6.1",
     "bootstrap-sass": "^3.3.6",
     "express": "^4.13.4",
-    "jade": "^1.11.0",
     "lodash": "^4.6.1",
-    "react": "^15.1.0",
-    "react-bootstrap": "^0.29.5",
-    "react-dom": "^15.1.0",
+    "pug": "^2.0.0-beta6",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.5",
@@ -50,15 +49,8 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "node-sass": "^3.4.2",
-    "react-hot-loader": "^1.3.0",
-    "react-transform-catch-errors": "^1.0.2",
-    "react-transform-hmr": "^1.0.2",
-    "redbox-react": "^1.2.9",
-    "redux-devtools": "^3.3.1",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.0.11",
-    "redux-slider-monitor": "^1.0.2",
-    "sass-loader": "^3.1.2",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "sass-loader": "^4.0.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
