--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "II2D redux",
   "homepage": "https://github.com/donilan/ii2d-redux",
   "scripts": {
-    "start": "NODE_ENV=develment concurrently --kill-others \"node src/server/index.js\" \"node src/server/webpackServer.js\"  ",
-    "clean": "rm -rf public/dist/*",
+    "start": "babel-node server.js",
+    "clean": "rm -rf public",
     "slate": "rm -rf node_modules && npm install",
-    "start-prod": "NODE_ENV=production node src/server/index.js",
-    "build": "npm run clean && NODE_ENV=production webpack -p --progress --colors --profile",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run clean && NODE_ENV=production webpack -p --progress --colors --profile"
   },
   "repository": {
     "type": "git",
@@ -36,6 +34,7 @@
     "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.18.0",
     "babel-core": "^6.6.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.0",
@@ -43,8 +42,6 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.6.0",
-    "concurrently": "^2.1.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
@@ -54,6 +51,8 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.13.2"
   }
 }
